infrastructure/reticulum/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: reticulum
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: reticulum
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reticulum-ingress
  namespace: reticulum
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: reticulum
      app.kubernetes.io/instance: reticulum
      app.kubernetes.io/name: reticulum
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "4242"
              protocol: TCP
